@@ -12,6 +12,9 @@ What's New in Python 2.7 beta 2?
 Core and Builtins
 -----------------
 
+- Issue #8417: Raise an OverflowError when an integer larger than sys.maxsize is
+  passed to bytearray.
+
 Library
 -------
 
